# zentriom-ai

./: README.md
flora-frontend/src/: app.css
flora-frontend/src/lib/components/shared/: Header.svelte  Sidebar.svelte
flora-frontend/src/lib/states/: app.svelte.js
flora-frontend/src/routes/: +layout.svelte  +page.js  +page.svelte
flora-frontend/src/routes/(app)/: +layout.svelte
flora-frontend/src/routes/(app)/bug-fixer/: +page.svelte
flora-frontend/src/routes/(app)/code-explainer/: +page.svelte
flora-frontend/src/routes/(app)/dashboard/: +page.svelte
flora-frontend/src/routes/(app)/grammar/: +page.svelte
flora-frontend/src/routes/(app)/history/: +page.svelte
flora-frontend/src/routes/(app)/jobs/: +page.svelte
zentriom-backend/: main.py  pyproject.toml
zentriom-backend/app/: main.py
zentriom-backend/app/api/: grammer.py  linkedin.py
zentriom-backend/app/core/: dependencies.py
zentriom-backend/app/graphs/: router.py  state.py  workflow.py
zentriom-backend/app/graphs/nodes/: chat.py  grammar.py  linkedin.py
zentriom-backend/app/models/: users.py
zentriom-backend/app/services/: code_explainer.py  granite.py
zentriom-frontend/: package-lock.json  package.json  svelte.config.js
zentriom-frontend/src/: app.html
zentriom-frontend/src/lib/services/: auth.js  google.js
zentriom-frontend/src/lib/stores/: auth.svelte.js
zentriom-frontend/src/routes/: +page.svelte
zentriom-frontend/src/routes/(app)/: +layout.svelte
zentriom-frontend/src/routes/forgot-password/: +page.svelte
zentriom-frontend/src/routes/reset-password/: +page.svelte
(+14 files in other folders)
