[project]
name = "flora-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "google-auth>=2.55.2",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "ibm-watsonx-ai>=1.5.14",
    "langchain>=1.3.11",
    "langchain-ibm>=1.1.0",
    "langgraph>=1.2.7",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
